# agentsecrets-sdk

./: .gitignore  README.md
javascript/: .gitignore  README.md  TUTORIAL.md  package.json  tsconfig.dev.json  tsconfig.json  tsconfig.test.json
javascript/examples/: github.ts  openai.ts  stripe.ts
javascript/src/: client.ts  index.ts  proxy.ts  types.ts  which.ts
javascript/src/testing/: mock.ts
javascript/tests/integration/: integration.test.ts
javascript/tests/unit/: proxy.test.ts
python/: .env.example  README.md  pyproject.toml
python/.agentsecrets/: project.json
python/agentsecrets/: __init__.py  _cli.py  auth.py  call.py  client.py  errors.py  models.py  proxy.py  spawn.py
python/agentsecrets/management/: __init__.py  allowlist.py  projects.py  proxy.py  secrets.py  workspaces.py
python/agentsecrets/testing/: __init__.py  mock.py
python/tests/: conftest.py  integration_test.py  test_auth.py  test_call.py  test_client.py  test_errors.py  test_mock.py  test_models.py
