[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsecrets-sdk"
version = "0.1.0"
description = "Python SDK for AgentSecrets — zero-knowledge secrets infrastructure for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "The Seventeen", email = "hello@theseventeen.dev" },
]
keywords = ["secrets", "security", "ai", "agents", "zero-knowledge", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/The-17/agentsecrets-sdk"
Documentation = "https://github.com/The-17/agentsecrets-sdk#readme"
Repository = "https://github.com/The-17/agentsecrets-sdk"
Issues = "https://github.com/The-17/agentsecrets-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["agentsecrets"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
